syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.exxeta.protos.example5";
option java_outer_classname = "Example5Protos";

service ExampleService {
  // Definition of a unary RPC
  rpc UnaryRpc (RequestMessage) returns (ResponseMessage);
  // Definition of a server streaming RPC
  rpc ServerStreamingRpc (RequestMessage) returns (stream ResponseMessage);
  // Definition of a client streaming RPC
  rpc ClientStreamingRpc (stream RequestMessage) returns (ResponseMessage);
  // Definition of a bidirectional streaming RPC
  rpc BidirectionalStreamingRpc (stream RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
  string text = 1;
}

message ResponseMessage {
  string text = 1;
}